@@ -1,14 +1,9 @@
 note
 	description: "Build specification"
+
 	notes: "GENERATED FILE. Do not edit"
 
-	author: "Finnian Reilly"
-	copyright: "Copyright (c) 2001-2017 Finnian Reilly"
-	contact: "finnian at eiffel hyphen loop dot com"
-
-	license: "MIT license (See: en.wikipedia.org/wiki/MIT_License)"
-	date: "2019-12-13 12:08:43 GMT (Friday 13th December 2019)"
-	revision: "1"
+	author: "Python module: eiffel_loop.eiffel.ecf.py"
 
 class
 	BUILD_INFO
@@ -20,7 +15,7 @@ feature -- Constants
 
 	Version_number: NATURAL = 01_02_25
 
-	Build_number: NATURAL = 500
+	Build_number: NATURAL = 508
 
 	Installation_sub_directory: EL_DIR_PATH
 		once
