@@ -27,7 +27,7 @@ system:
 		root:
 			class = APPLICATION_ROOT; feature = make
 		version:
-			major = 1; minor = 2; release = 25; build = 501
+			major = 1; minor = 2; release = 25; build = 508
 			company = "Eiffel-Loop"; product = "toolkit"
 			copyright = "Finnian Reilly"
 
@@ -177,6 +177,6 @@ system:
 					precondition = true; postcondition = true; check = true
 
 		cluster:
-			name = project; location = "source"; recursive = true
+			name = project; location = source; recursive = true
 
 
